--- a/relatorioMycash/.classpath
+++ b/relatorioMycash/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="con" path="net.sf.jasperreports.JR_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="com.jaspersoft.server.JRS_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Seventech/eclipse-workspace/Mycash/src/br/com/loov/mycash/model/Conta.java"/>
+	<classpathentry kind="lib" path="C:/Users/Seventech/eclipse-workspace/Mycash/src/br/com/loov/mycash/model/Debito.java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
